Fixed layout issues.

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,11 @@ body {
 .flex-container {
   flex: 1 1 auto;
 }
+
+mat-sidenav {
+  width: 200px;
+}
+
+mat-sidenav-content {
+  padding: 30px;
+}
